--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link href="styles.css" rel="stylesheet" />
 </head>
-<body class="auth-body">
+<body class="light">
   <main class="auth-card">
     <div class="brand">
       <div class="logo-dot"></div>
@@ -50,3 +50,4 @@
   </script>
 </body>
 </html>
+
