--- a/login.html
+++ b/login.html
@@ -6,7 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link href="styles.css" rel="stylesheet" />
 </head>
-<body class="light">
+<body class="auth-body light">
+
   <main class="auth-card">
     <div class="brand">
       <div class="logo-dot"></div>
@@ -50,4 +51,5 @@
   </script>
 </body>
 </html>
+
 
