--- a/login.html
+++ b/login.html
@@ -12,8 +12,12 @@
   <main class="auth-card">
     <div class="brand">
       <div class="logo-dot"></div>
-      <h1>Sistema Control Vehicular</h1>
-      <p class="muted">Demo funcional — Fase 1</p>
+     <div class="logo-box">
+  <img src="t3ch1.jpg" alt="Logo T3ch" class="logo-img">
+</div>
+<h2>Sistema Control Vehicular</h2>
+<p class="muted">Demo funcional — Fase 1</p>
+
     </div>
 
     <form id="loginForm" class="form">
@@ -52,6 +56,7 @@
   </script>
 </body>
 </html>
+
 
 
 
