--- a/login.html
+++ b/login.html
@@ -16,7 +16,7 @@
   <img src="t3ch1.jpg" alt="Logo T3ch" class="logo-img">
 </div>
 <h2>Sistema Control Vehicular</h2>
-<p class="muted">Demo funcional — Fase 1</p>
+<p class="muted">Demo funcional — Fase 1, 2</p>
 
     </div>
 
@@ -56,6 +56,7 @@
   </script>
 </body>
 </html>
+
 
 
 
